--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "DVP-DBModels": "DuoSoftware/DVP-DBModels",
+    "DVP-Common": "DuoSoftware/DVP-Common",
     "config": "^1.12.0",
     "restify": "^3.0.2",
     "stringify": "^3.1.0"
