--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "DVP-SystemRegistry",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "description": "System services information metadata",
-  "main": "app.js",
+  "main": "SysRegBackendHandler.js",
   "dependencies": {
-    "DVP-DBModels": "DuoSoftware/DVP-DBModels",
-    "DVP-Common": "DuoSoftware/DVP-Common",
-    "config": "^1.12.0",
+    "DVP-Common": "^0.0.0",
+    "DVP-DBModels": "^0.0.0",
+    "config": "^1.13.0",
+    "node-uuid": "^1.4.3",
     "restify": "^3.0.2",
-    "stringify": "^3.1.0"
+    "stringify": "^3.1.0",
+    "swagger-restify-express": "^0.2.1"
   },
   "devDependencies": {},
   "scripts": {
