--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "underscore": "^1.8.3",
     "dvp-common": "^0.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "standard": "^5.3.1"
+  },
   "scripts": {
     "test": "standard"
   },
